<resources>
    <string name="app_name">Quiz App</string>
    <string name="wel_come_to_the_quiz">Welcome to Quiz</string>
    <string name="please_enter_your_name">Please Enter your name</string>
    <string name="let_s_start">Start</string>
    <string name="quiz_app">Quiz App</string>
    <string name="name">Name</string>
    <string name="submit">SUBMIT</string>
    <string name="finish">Finish</string>
    <string name="next_question">GO TO NEXT QUESTION</string>
    <string name="hey_congratulation">Hey Congratulation</string>
    <string name="result">Result</string>
    <string name="todo">TODO</string>
</resources>